infer/tests/codetoanalyze/go/biabduction/simple_fun_npe.go
package empty

func foo() int {
	return bar(nil)
}

func bar(i *int) int {
	return *i // error
}
